bebytes/tests/compile_time/enums/duplicate_discriminants.stderr
error[E0081]: discriminant value `1` assigned more than once
  --> tests/compile_time/enums/duplicate_discriminants.rs:8:1
   |
8  | enum DuplicateDiscriminants {
   | ^^^^^^^^^^^^^^^^^^^^^^^^^^^
9  |     A = 0,
10 |     B = 1,
   |         - `1` assigned here
11 |     C = 1, // Error: Duplicate discriminant value
   |         - `1` assigned here
